test/Fail/Issue5048.err
Issue5048.agda:12.8-12: error: [UnequalTerms]
quote Agda.Builtin.Nat.Nat != quote Name of type Name
when checking that the expression refl has type M.a ≡ quote Name
